added a lot of challenges and stuff